# breeze

./: .gitignore  .readthedocs.yml  CHANGELOG.md  README.md  noxfile.py  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/templates/: CHANGELOG.md.j2
docs/: changelog.md  conf.py  index.md
docs/_code/: click_example.py
docs/_gallery/: GALLERY_HEADER.rst  plot_01_basic.py  plot_02_multiple_figures.py  plot_03_subplots.py  plot_04_styled.py  plot_05_output.py  plot_06_failing.py  plot_07_no_output.py
docs/_templates/partials/: extra-head.html
docs/contributing/: index.md
docs/examples/: index.md
docs/examples/kitchen-sink/: blocks.rst  lists.rst
docs/extensions/: click-extra.md  index.md  jupyter-sphinx.md  myst-nb.md  nbsphinx.cipynb  nbsphinx.md  numpydoc.md  sphinx-autoapi.md  sphinx-click.md  sphinx-contributors.md  sphinx-copybutton.md  sphinx-datatables.md  sphinx-design.md  sphinx-docsearch.md  sphinx-togglebutton.md  sphinx-treeview.md  sphinxcontrib-mermaid.md  sphinxcontrib-video.md  sphinxcontrib-youtube.md
docs/kitchen-sink/: index.md
docs/kitchen-sink/extensions/: numpydoc.md  sphinx-contributors.md  sphinx-copybutton.md  sphinx-design.md  sphinx-togglebutton.md  sphinxcontrib-mermaid.md
docs/user_guide/: accessibility.md  index.md  layout.md  markup.md  quickstart.md
docs/user_guide/components/: edit-this-page.md  lang-switcher.md  page-actions.md  repo-stats.md  version-switcher.md
docs/user_guide/customisation/: banners.md  branding.md  layout.md  light-dark.md
docs/user_guide/customisation/components/: edit-this-page.md  external-links.md
scripts/: generate-icons.js
src/sphinx_breeze_theme/: __init__.py  icons.py  links.py  opengraph.py  pygments.py  toctree.py  utils.py
src/sphinx_breeze_theme/assets/scripts/: breeze.ts  component.ts  version.ts
src/sphinx_breeze_theme/assets/scripts/components/: back-to-top.ts  dropdown.ts  index.ts  label-button.ts  page-actions.ts  repo-stats.ts  responsive-tabs.ts  search-button.ts  sidebar-drawer.ts  sidebar-toc.ts  sphinx-search.ts  theme-switcher.ts  version-switcher.ts
src/sphinx_breeze_theme/assets/scripts/utils/: theme.ts
src/sphinx_breeze_theme/assets/styles/: breeze.css  common.css  utils.css
src/sphinx_breeze_theme/assets/styles/components/: breadcrumb.css  breadcrumbs.css  dropdown.css  external-links.css  lang-switcher.css  page-actions.css  related-pages.css  repo-stats.css  search-button.css  sidebar-nav.css  sidebar-toc.css  theme-switcher.css  version-switcher.css
src/sphinx_breeze_theme/assets/styles/extensions/: contributors.css  copybutton.css  datatables.css  design.css  docsearch.css  gallery.css  jupyter.css  mermaid.css  myst-nb.css  nbsphinx.css  readthedocs.css  togglebutton.css
src/sphinx_breeze_theme/assets/styles/sections/: article-header.css  back-to-top.css  content.css  footer.css  header-main.css  header-tabs.css  sidebar-primary.css  sidebar-secondary.css  skip-to-content.css
src/sphinx_breeze_theme/assets/styles/sphinx/: admonition.css  api.css  block.css  code.css  footnote.css  math.css  misc.css  (+4 more)
src/sphinx_breeze_theme/theme/breeze/: layout.html  search.html  theme.conf
(+29 files in other folders)
