[build-system]
requires = ["hatchling", "hatch-build-scripts"]
build-backend = "hatchling.build"

[project]
name = "sphinx-breeze-theme"
description = "A clean and modern Sphinx theme with polished API docs."
authors = [{ name = "Aksiome", email = "54895777+aksiome@users.noreply.github.com" }]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MPL-2.0" }
dependencies = [
  "sphinx>=8.0",
  "sphinxext-opengraph[social-cards]",
  "beautifulsoup4",
  "docutils",
  "emoji",
  "pygments",
  "accessible-pygments",
  "typing-extensions",
]
keywords = [
  "sphinx",
  "theme",
  "documentation",
  "sphinx-theme",
  "html-theme",
  "design",
  "breeze"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/aksiome/breeze"
Repository = "https://github.com/aksiome/breeze"
Documentation = "https://sphinx-breeze-theme.readthedocs.io/"
Issues = "https://github.com/aksiome/breeze/issues"

[dependency-groups]
docs = [
  "click-extra[sphinx]>=7.4.0",
  "jupyter-sphinx>=0.5.3",
  "myst-nb>=1.3.0; python_version >= '3.11'",
  "myst-parser>=5.0.0; python_version >= '3.11'",
  "nbsphinx>=0.9.8",
  "pandas>=3.0.0; python_version >= '3.11'",
  "sphinx-click>=6.2.0",
  "sphinx-contributors>=0.2.7",
  "sphinx-copybutton>=0.5.2",
  "sphinx-datatables>=1.0.0",
  "sphinx-design>=0.7.0; python_version >= '3.11'",
  "sphinx-docsearch>=0.3.0",
  "sphinx-gallery>=0.20.0",
  "sphinx-sitemap>=2.9.0",
  "sphinx-togglebutton>=0.4.4",
  "sphinx-treeview>=1.1.1; python_version >= '3.11'",
  "sphinxcontrib-mermaid>=2.0.0",
  "sphinxcontrib-video>=0.4.1",
  "sphinxcontrib-youtube>=1.4.1",
]

[project.entry-points]
"sphinx.html_themes" = { breeze = "sphinx_breeze_theme" }

[tool.hatch.version]
path = "src/sphinx_breeze_theme/__init__.py"

[[tool.hatch.build.hooks.build-scripts.scripts]]
commands = ["npm install", "npm run build"]

[tool.semantic_release]
allow_zero_version = true
major_on_zero = false
commit_message = "chore(release): {version}"
version_variables = ["src/sphinx_breeze_theme/__init__.py:__version__"]

[tool.semantic_release.changelog]
template_dir = ".github/templates"
exclude_commit_patterns = ["^chore"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
  "chore",
  "ci",
  "docs",
  "feat",
  "fix",
  "i18n",
  "perf",
  "refactor",
  "style",
  "test",
  "ui",
]
minor_tags = ["feat"]
patch_tags = ["fix", "i18n", "ui"]
